bug fixes in api services