@@ -3,6 +3,7 @@ package com.jxtdev.knyapi.services;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,6 +15,7 @@ import com.jxtdev.knyapi.dto.PowerDTO;
 import com.jxtdev.knyapi.entities.Power;
 import com.jxtdev.knyapi.entities.Skill;
 import com.jxtdev.knyapi.repositories.PowerRepository;
+import com.jxtdev.knyapi.repositories.SkillRepository;
 
 @Service
 public class PowerService {
@@ -21,12 +23,15 @@ public class PowerService {
     @Autowired
     private PowerRepository powerRepository;
 
+    @Autowired
+    private SkillRepository skillRepository;
+
     public List<PowerDTO> findAllPowers() {
         List<Power> listPowers = powerRepository.findAll();
         ModelMapper modelMapper = new ModelMapper();
         return listPowers.stream()
                 .map(powerDTO -> modelMapper.map(powerDTO, PowerDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public PowerDTO findPowerById(Long id) {
@@ -38,17 +43,27 @@ public class PowerService {
     }
 
     public PowerDTO addPower(PowerDTO powerDTO) {
-        try {
-            if (this.powerRepository.findByName(powerDTO.getName()).isPresent()) {
-                throw new IllegalArgumentException("Power with name " + powerDTO.getName() + " already exists");
-            }
-            ModelMapper modelMapper = new ModelMapper();
-            Power power = modelMapper.map(powerDTO, Power.class);
-            Power powerSave = this.powerRepository.save(power);
-            return modelMapper.map(powerSave, PowerDTO.class);
-        } catch (DataIntegrityViolationException e) {
-            throw new IllegalStateException("Error saving power", e);
+        if (this.powerRepository.findByName(powerDTO.getName()).isPresent()) {
+            throw new IllegalArgumentException("Power with name " + powerDTO.getName() + " already exists");
         }
+
+        Skill skill;
+        Optional<Skill> sOptional = skillRepository.findByName(powerDTO.getSkill().getName());
+        if (sOptional.isPresent()) {
+            skill = Skill.builder()
+            .name(powerDTO.getSkill().getName())
+            .description(powerDTO.getSkill().getDescription())
+            .build();
+        }else throw new IllegalArgumentException("Power with name " + powerDTO.getSkill().getName() + " already exists");
+
+        Power power = Power.builder()
+                .name(powerDTO.getName())
+                .description(powerDTO.getDescription())
+                .skill(skill)
+                .build();
+        Power powerSave = this.powerRepository.save(power);
+        ModelMapper MMpPowerDTO = new ModelMapper();
+        return MMpPowerDTO.map(powerSave, PowerDTO.class);
     }
 
     public List<Power> addListPower(List<PowerDTO> powersDTO) {
@@ -59,7 +74,7 @@ public class PowerService {
                 // Validar si el poder ya existe en la base de datos por su nombre
                 Optional<Power> existingPower = this.powerRepository.findByName(powerDTO.getName());
                 if (existingPower.isPresent()) {
-                    throw new IllegalArgumentException("Power with name " + powerDTO.getName() + " already exists");
+                    throw new IllegalArgumentException("Skill with name " + powerDTO.getName() + " not found");
                 } else {
                     // Si no existe, construir y añadir el nuevo poder a la lista
                     Power power = Power.builder()
